--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "addict>=2.4.0",
     "requests>=2.31.0",
     "easyocr>=1.7.1",
+    "google-generativeai>=0.7.0",
 ]
 
 [project.optional-dependencies]
