--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "requests>=2.31.0",
     "easyocr>=1.7.1",
     "google-generativeai>=0.7.0",
+    "opencv-python-headless==4.10.0.84",
+    "psutil>=5.9.0",
 ]
 
 [project.optional-dependencies]
