--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "google-generativeai>=0.7.0",
     "opencv-python-headless==4.10.0.84",
     "psutil>=5.9.0",
+    "yomitoku>=0.10.1",
 ]
 
 [project.optional-dependencies]
