--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "opencv-python-headless==4.10.0.84",
     "psutil>=5.9.0",
     "yomitoku>=0.10.1",
+    "supabase>=2.4.0",
 ]
 
 [project.optional-dependencies]
