--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,8 @@
     "@supabase/supabase-js": "^2.79.0",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@types/node": "^20",
