--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "torch>=2.1.0",
     "transformers==4.46.3",
     "Pillow>=10.0.0",
+    "pillow-heif>=0.16.0",
     "torchvision>=0.16.0",
     "numpy>=1.24.0",
     "tqdm>=4.66.0",
